--- a/package.json
+++ b/package.json
@@ -85,8 +85,10 @@
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^25.2.3",
+    "@types/jquery": "^3.3.38",
     "@types/node": "^14.0.11",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "colors": "^1.4.0",
     "commitizen": "^4.1.2",
@@ -96,6 +98,8 @@
     "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsdoc": "^27.0.4",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
@@ -117,11 +121,5 @@
     "tslint": "^6.1.2",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5"
-  },
-  "dependencies": {
-    "@types/jquery": "^3.3.38",
-    "@typescript-eslint/eslint-plugin-tslint": "^3.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsdoc": "^27.0.4"
   }
 }
